--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -139,15 +139,7 @@
   </style>
 </head>
 <body>
-<div class="navbar">
-  <div class="nav-left">
-    <div class="nav-icon" onclick="history.back()"><i class="fas fa-qrcode"></i></div>
-  </div>
-  <div class="title-bar">MINEPLIX</div>
-  <div class="nav-right">
-    <div class="nav-icon"><i class="fas fa-bell"></i></div>
-  </div>
-</div>
+<div class="navbar"><div class="nav-left"><div class="nav-icon" onclick="history.back()"><i class="fas fa-qrcode"></i></div></div><div class="title-bar">Leaderboard</div><div class="nav-right"><div class="nav-icon"><i class="fas fa-envelope-open-text"></i></div></div></div>
 
 <div class="update-card"><span>informasi leaderboard di update setiap seminggu jadi sering sering cek update terbaru dengan merefresh halaman ini. website ini di design lebih rapih di android dan ios di dekstop dsb bisa cuma agak melebar hehe</span></div>
 
